# swagger.json
@@ -39,28 +39,28 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "The Dark Knight Rises"
+                  "example": "any"
                 },
                 "description": {
-                  "example": "Bane, an imposing terrorist, attacks Gotham City and disrupts its eight-year-long period of peace."
+                  "example": "any"
                 },
                 "genre": {
-                  "example": ["Action", "Crime"]
+                  "example": "any"
                 },
                 "releaseYear": {
-                  "example": "2012"
+                  "example": "any"
                 },
                 "directorId": {
-                  "example": "69d009f5e4bb8a167dde56dd"
+                  "example": "any"
                 },
                 "actors": {
-                  "example": ["69d00c99e4bb8a167dde56e5"]
+                  "example": "any"
                 },
                 "imdbId": {
-                  "example": "tt1345836"
+                  "example": "any"
                 },
                 "rating": {
-                  "example": "PG-13"
+                  "example": "any"
                 }
               }
             }
@@ -121,28 +121,28 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "The Dark Knight Rises"
+                  "example": "any"
                 },
                 "description": {
-                  "example": "Bane, an imposing terrorist, attacks Gotham City and disrupts its eight-year-long period of peace. This forces Bruce Wayne to come out of hiding and don the cape and cowl of Batman again."
+                  "example": "any"
                 },
                 "genre": {
-                  "example": ["Action", "Crime", "Drama"]
+                  "example": "any"
                 },
                 "releaseYear": {
-                  "example": "2012"
+                  "example": "any"
                 },
                 "directorId": {
-                  "example": "69d009f5e4bb8a167dde56dd"
+                  "example": "any"
                 },
                 "actors": {
-                  "example": ["69d00c99e4bb8a167dde56e5"]
+                  "example": "any"
                 },
                 "imdbId": {
-                  "example": "tt1345836"
+                  "example": "any"
                 },
                 "rating": {
-                  "example": "PG-13"
+                  "example": "any"
                 }
               }
             }
@@ -170,6 +170,169 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/actors/": {
+      "get": {
+        "tags": [
+          "Actors"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Actors"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "birthdate": {
+                  "example": "any"
+                },
+                "nationality": {
+                  "example": "any"
+                },
+                "movieIds": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/actors/{id}": {
+      "get": {
+        "tags": [
+          "Actors"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Actors"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "birthdate": {
+                  "example": "any"
+                },
+                "nationality": {
+                  "example": "any"
+                },
+                "movieIds": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Actors"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
